Update 'ezpl4apw8-nodejs' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-a17f173fce.3bb1.p3.openshiftapps.com/rhtap/rhtap-qe:121410c076e1ecc8a097d049971da1118ad1379e@sha256:66ddb7b31e08bbd6c7a0f87b4051a9d12bb5f742949c3a5a4fd4464228c13777

--- a/components/ezpl4apw8-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/ezpl4apw8-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ezpl4apw8-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-a17f173fce.3bb1.p3.openshiftapps.com/rhtap/rhtap-qe:121410c076e1ecc8a097d049971da1118ad1379e@sha256:66ddb7b31e08bbd6c7a0f87b4051a9d12bb5f742949c3a5a4fd4464228c13777
+          name: container-image
